Extend `Trip` functionality to include `Hotel` handling in creation, updates, and response mapping. Refactor `TripMapper` and `TripService` for hotel-related processing.