@@ -1,6 +1,7 @@
 package bbw.tm.backend.trip;
 
 import bbw.tm.backend.account.Account;
+import bbw.tm.backend.hotel.HotelMapper;
 import bbw.tm.backend.transport.Transport;
 import bbw.tm.backend.transport.TransportMapper;
 import bbw.tm.backend.transport.TransportRequestDTO;
@@ -8,6 +9,8 @@ import bbw.tm.backend.transport.TransportRequestDTO;
 import java.util.stream.Collectors;
 
 public class TripMapper {
+
+    private static final HotelMapper hotelMapper = new HotelMapper();
 
     public static Trip toTrip(TripRequestDTO requestDTO, Account account) {
         Trip trip = new Trip();
@@ -34,7 +37,13 @@ public class TripMapper {
             trip.getTripType(),
             trip.getStartDate(),
             trip.getEndDate(),
-            trip.getTransports().stream().map(TransportMapper::toResponseDTO).toList()
+                trip.getTransports().stream()
+                        .map(TransportMapper::toResponseDTO)
+                        .collect(Collectors.toList()),
+                trip.getHotels().stream()
+                        .map(hotelMapper::toDTO) // Hotels mappen
+                        .toList()
         );
+
     }
 }
